[tool.poetry]
name = "currency-converter-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "currency_converter_project"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "2.31.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
